--- a/package.json
+++ b/package.json
@@ -4,12 +4,30 @@
   "description": "This tool helps with creating layers for Leaflet maps.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development",
+    "watch": "webpack --mode=development --watch"
   },
   "author": "WRK/FMD",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^3.4.5"
+    "@types/leaflet": "^1.4.4",
+    "@types/node": "^12.0.3",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "ts-loader": "^6.0.1",
+    "typescript": "^3.5.1",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
+    "leaflet": "^1.5.1",
+    "leaflet-easybutton": "^2.4.0"
+  }
 }
