--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
     "leaflet": "^1.5.1",
-    "leaflet-easybutton": "^2.4.0"
+    "leaflet-easybutton": "^2.4.0",
+    "rxjs": "^6.5.2"
   }
 }
