--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
+    "bootstrap": "^4.3.1",
     "leaflet": "^1.5.1",
     "leaflet-easybutton": "^2.4.0",
     "rxjs": "^6.5.2"
