--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "ts-loader": "^6.0.4",
     "typescript": "^3.5.3",
     "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5"
+    "webpack-cli": "^3.3.6"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.9.0",
     "bootstrap": "^4.3.1",
     "leaflet": "^1.5.1",
     "leaflet-easybutton": "^2.4.0",
+    "leaflet-editable": "^1.2.0",
     "rxjs": "^6.5.2"
   }
 }
