Prepare webpack for release

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development",
-    "watch": "webpack --mode=development --watch"
+    "build:dev": "webpack --mode=development --output-path=dist-dev",
+    "watch": "webpack --mode=development --output-path=dist-dev --watch"
   },
   "author": "WRK/FMD",
   "license": "MIT",
