--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geotool",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "This tool helps with creating layers for Leaflet maps.",
   "main": "index.js",
   "scripts": {
@@ -12,25 +12,25 @@
   "author": "WRK/FMD",
   "license": "MIT",
   "devDependencies": {
-    "@types/leaflet": "^1.5.17",
-    "@types/node": "^14.0.27",
-    "css-loader": "^4.2.1",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.10.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.3",
-    "ts-loader": "^8.0.2",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "@types/leaflet": "^1.7.2",
+    "@types/node": "^15.12.2",
+    "css-loader": "^5.2.6",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.6.0",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.3",
+    "webpack": "^5.39.1",
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.14.0",
-    "bootstrap": "^4.5.2",
-    "leaflet": "^1.6.0",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "bootstrap": "^4.6.0",
+    "leaflet": "^1.7.1",
     "leaflet-easybutton": "^2.4.0",
     "leaflet-editable": "^1.2.0",
-    "rxjs": "^6.6.2"
+    "rxjs": "^7.1.0"
   }
 }
