Fix: Release ZIP was empty

--- a/.github/workflows/release-geotool.yml
+++ b/.github/workflows/release-geotool.yml
@@ -32,7 +32,7 @@ jobs:
           cp -p ./LICENSE "./${name}/"
           cp -p ./README.md "./${name}/"
           tar -czpf "${name}.tar.gz" "$name"
-          zip "${name}.zip" "$name"
+          zip -r "${name}.zip" "$name"
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
